--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,5 +1,50 @@
+html {
+    font-size: 100%;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
 body {
     margin: 0;
     padding: 0;
-    font-size: 14px;
+    color: #dad8d8;
+    font-family: $openSans;
+}
+
+a {
+    text-decoration: none;
+}
+
+h1,
+h2,
+h3 {
+    color: $white;
+    font-family: $raleway;
+}
+
+.button {
+    display: inline-block;
+    min-width: 240px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    background: linear-gradient(to right, $cyan, $blue);
+    border-radius: 30px;
+    color: $white;
+    border: transparent;
+    cursor: pointer;
+    font-weight: bold;
+    font-family: $raleway;
+    font-size: 13.5px;
+    
+    @include breakpoint-up(medium) {
+        font-size: 15px;
+        min-width: 260px;
+        padding-top: 17px;
+        padding-bottom: 17px;
+    }
 }
