--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -1,40 +1,83 @@
 .feature__container {
     background: $mainBlue;
+    margin-top: 0px;
+    padding-top: 8.4rem;
+
+    @include breakpoint-up(medium) {
+        margin-top: -28px;
+        padding-top: 0;
+        padding-bottom: 110px;
+    }
 
     .feature {
         &__wrapper {
             margin: auto;
-            width: 61%;
-            padding: 5rem 0 4rem;
+            max-width: 51.85rem;
             display: flex;
             align-items: center;
-            justify-content: space-between;
             flex-wrap: wrap;
+            justify-content: center;
+
+            @include breakpoint-up(medium) {
+                justify-content: space-between;
+            }
         }
 
         &__card {
             text-align: center;
-            width: 21rem;
-            margin-top: 5rem;
+            width: 20rem;
+            margin-bottom: 4.8rem;
+
+            @include breakpoint-up(medium) {
+                width: 21rem;
+                margin-bottom: 0;
+            }
 
             &:nth-child(2) {
                 img {
-                    width: 4rem;
+                    width: 3.35rem;
+
+                    @include breakpoint-up(medium) {
+                        width: 4rem;
+                    }
                 }
             }
 
             img {
-                width: 5rem;
+                width: 4rem;
+                margin-bottom: 10px;
 
+                @include breakpoint-up(medium) {
+                    width: 5rem;
+                    margin-top: 3px;
+                }
             }
 
             h3 {
                 margin-bottom: 0;
+                font-weight: 600;
+                font-size: 18px;
+
+                @include breakpoint-up(medium) {
+                    font-size: 1.17em;
+                }
             }
 
             p {
-                font-size: 13.2px;
+                font-size: 14px;
+                margin-top: 9px;
+                line-height: 1.5;
+
+                @include breakpoint-up(medium) {
+                    font-size: 13.2px;
+                }
             }
+        }
+    }
+
+    .upper-card {
+        @include breakpoint-up(medium) {
+            margin-bottom: 4.5rem;
         }
     }
 }
