--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,10 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 0;
 
     @include breakpoint-up(medium) {
-        padding: 4.3rem 4.65rem;
+        padding: 4.3rem 4.65rem 0;
     }
 
     &__logo {
