--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,6 @@
 @import 'intro';
 @import 'feature';
 @import 'stay-productive';
+@import 'testimonials';
+@import 'early-access';
 @import 'footer';
