--- a/scss/_testimonials.scss
+++ b/scss/_testimonials.scss
@@ -25,8 +25,8 @@
 
         @include breakpoint-up(medium) {
             max-width: 69rem;
-            background-size: auto;
-            padding-top: 2.15rem;
+            background-size: 4.7%;
+            padding-top: 2rem;
             background-position-x: initial;
         }
     }
