--- a/scss/_early-access.scss
+++ b/scss/_early-access.scss
@@ -1,22 +1,30 @@
 .early-access {
     text-align: center;
     position: relative;
-    min-height: 24.5rem;
+    min-height: 29rem;
     background-color: $mainBlue;
+
+    @include breakpoint-up(medium) {
+        min-height: 24.5rem;
+    }
 
     &::after {
         content: ' ';
         width: 100%;
         position: absolute;
-        height: 45%;
+        height: 50%;
         bottom: 0;
         left: 0;
         z-index: 1;
         background-color: $footerBlue;
+
+        @include breakpoint-up(medium) {
+            height: 45%;
+        }
     }
 
     &__wrapper {
-        padding: 2rem 4.6rem 2.3rem;
+        padding: 1.4rem 1.8rem 2.3rem;
         border-radius: 0.5rem;
         background-color: $introBlue;
         margin: 0 auto;
@@ -26,18 +34,32 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 2;
-        width: 60%;
+        width: 90%;
         max-width: 86.3rem;
 
+        @include breakpoint-up(medium) {
+            width: 60%;
+            padding: 2rem 4.6rem 2.3rem;
+        }
+
         h1 {
-            font-size: 30px;
+            font-size: 18px;
             font-weight: 600;
-            margin: 16px auto 22px;
+            margin: 16px auto 18px;
+
+            @include breakpoint-up(medium) {
+                font-size: 30px;
+                margin: 16px auto 22px;
+            }
         }
 
         p {
-            font-size: 13.5px;
+            font-size: 14px;
             line-height: 1.5;
+
+            @include breakpoint-up(medium) {
+                font-size: 13.5px;
+            }
         }
 
         form {
@@ -45,6 +67,11 @@
             margin-top: 2.1rem;
             flex-direction: row;
             justify-content: space-between;
+            flex-direction: column;
+
+            @include breakpoint-up(medium) {
+                flex-direction: row;
+            }
 
             input {
                 border: none;
@@ -58,6 +85,11 @@
                 max-width: 48rem;
                 width: 100%;
                 margin-right: 1.6rem;
+                margin-bottom: 1.5rem;
+
+                @include breakpoint-up(medium) {
+                    margin-bottom: 0;
+                }
             }
 
             .button {
