--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
+    font-size: 0.9375rem;
     background: $footerBlue;
-    font-size: 15px;
 
     &__wrapper {
-        padding: 1rem 0 1.5rem;
-        margin: 0 auto;
         width: 85%;
+        margin: 0 auto;
+        padding: 1rem 0 1.5rem;
 
         @include breakpoint-up(medium) {
             width: auto;
@@ -16,8 +16,8 @@
     &__content {
         width: 90vw;
         margin: auto;
-        margin-top: 8px;
         display: block;
+        margin-top: 0.5rem;
         grid-template-columns: 6.5fr 4fr 2fr 2fr 2fr;
 
         @include breakpoint-up(medium) {
@@ -27,9 +27,9 @@
     }
 
     &__logo {
-        margin-bottom: 1.5rem;
         width: 11rem;
         margin-left: 2vw;
+        margin-bottom: 1.5rem;
 
         @include breakpoint-up(medium) {
             width: auto;
@@ -39,23 +39,23 @@
 
     &__desc {
         display: grid;
-        grid-template-columns: 0.15fr 1fr;
         align-items: center;
+        grid-template-columns: 0.15fr 1fr;
 
         @include breakpoint-up(medium) {
             grid-template-columns: 0.1fr 1fr;
         }
 
         p {
-            line-height: 1.7;
             margin: 0;
+            line-height: 1.7;
         }
 
         img {
             width: auto;
 
             @include breakpoint-up(medium) {
-                width: 18px;
+                width: 1.125rem;
             }
         }
 
@@ -90,7 +90,7 @@
 
     &__contact {
         p {
-            font-size: 14px;
+            font-size: 0.875rem;
         }
 
         .footer__desc:first-child {
@@ -107,7 +107,7 @@
         flex-direction: column;
 
         a {
-            color: white;
+            color: $white;
             margin-bottom: 1rem;
             transition: all 0.3s ease-in-out;
 
@@ -136,14 +136,14 @@
         }
 
         .social {
-            border: 1px solid $white;
-            border-radius: 50%;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
             width: 1.8rem;
             height: 1.8rem;
+            cursor: pointer;
+            border-radius: 50%;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid $white;
             transition: all 0.3s ease-in-out;
 
             &:not(:last-child) {
@@ -170,11 +170,11 @@
         }
 
         .social__icon:first-child {
-            height: 14px;
+            height: 0.875rem;
         }
 
         .social__icon {
-            width: 16px;
+            width: 1rem;
         }
     }
 }
