--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -1,21 +1,21 @@
 .feature__container {
-    background: $mainBlue;
     margin-top: 0px;
     padding-top: 8.4rem;
+    background: $mainBlue;
 
     @include breakpoint-up(medium) {
-        margin-top: -28px;
         padding-top: 0;
-        padding-bottom: 110px;
+        margin-top: -1.75rem;
+        padding-bottom: 6.875rem;
     }
 
     .feature {
         &__wrapper {
             margin: auto;
-            max-width: 51.85rem;
             display: flex;
-            align-items: center;
             flex-wrap: wrap;
+            max-width: 51.85rem;
+            align-items: center;
             justify-content: center;
 
             @include breakpoint-up(medium) {
@@ -24,8 +24,8 @@
         }
 
         &__card {
-            text-align: center;
             width: 20rem;
+            text-align: center;
             margin-bottom: 4.8rem;
 
             @include breakpoint-up(medium) {
@@ -56,7 +56,7 @@
             h3 {
                 margin-bottom: 0;
                 font-weight: 600;
-                font-size: 18px;
+                font-size: 1.125rem;
 
                 @include breakpoint-up(medium) {
                     font-size: 1.17em;
@@ -64,9 +64,9 @@
             }
 
             p {
-                font-size: 14px;
-                margin-top: 9px;
                 line-height: 1.5;
+                font-size: 0.875rem;
+                margin-top: 0.5625rem;
 
                 @include breakpoint-up(medium) {
                     font-size: 13.2px;
