--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -5,32 +5,32 @@
     }
 
     @include breakpoint-up(medium) {
+        margin-top: 0;
         padding-top: 4rem;
         background: url("../images/bg-curvy-desktop.svg");
-        background-position-y: bottom;
-        background-repeat: no-repeat;
         background-size: contain;
-        margin-top: 0;
+        background-repeat: no-repeat;
+        background-position-y: bottom;
     }
 
     @include breakpoint-down(small) {
         padding-top: 3rem;
+        margin-top: -1.25rem;
         background: url("../images/bg-curvy-mobile.svg"), linear-gradient($introBlue 61%, $mainBlue 61%);
+        background-size: contain;
         background-position-y: 52%;
         background-repeat: no-repeat;
-        background-size: contain;
-        margin-top: -20px;
     }
 
     &__wrapper {
-        display: flex;
-        margin: auto;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
         width: 80%;
-        margin-top: 1rem;
+        margin: auto;
+        display: flex;
         max-width: 72rem;
+        margin-top: 1rem;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
 
         @include breakpoint-up(medium) {
             width: 50%;
@@ -48,31 +48,31 @@
         text-align: center;
 
         h1 {
-            font-size: 24px;
             line-height: 1.5;
-            margin-top: 30px;
+            font-size: 1.5rem;
+            margin-top: 1.875rem;
 
             @include breakpoint-up(medium) {
-                font-size: 38px;
+                font-size: 2.375rem;
             }
         }
 
         p {
-            font-size: 14px;
             padding: 0;
             line-height: 1.5;
+            font-size: 0.875rem;
 
             @include breakpoint-up(medium) {
-                font-size: 18.5px;
                 padding: 0 3rem;
+                font-size: 18.5px;
             }
         }
 
         .button {
-            margin-top: 16px;
+            margin-top: 1rem;
 
             @include breakpoint-up(medium) {
-                margin-top: 10px;
+                margin-top: 0.625rem;
             }
         }
     }
