--- a/scss/_stay-productive.scss
+++ b/scss/_stay-productive.scss
@@ -2,18 +2,18 @@
     background: $mainBlue;
 
     &__wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
         margin: auto;
-        flex-direction: column;
-        padding: 5rem 0;
+        display: flex;
         max-width: 85%;
+        padding: 5rem 0;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
 
         @include breakpoint-up(medium) {
-            flex-direction: row;
             padding: 0;
             max-width: 72rem;
+            flex-direction: row;
         }
     }
 
@@ -27,8 +27,8 @@
 
         img {
             width: 95%;
-            display: block;
             margin: auto;
+            display: block;
 
             @include breakpoint-up(medium) {
                 width: 100%;
@@ -41,41 +41,41 @@
 
         &__wrapper {
             width: 100%;
-            margin-left: auto;
             line-height: 1.5;
-            font-size: 14px;
+            margin-left: auto;
+            font-size: 0.875rem;
 
             @include breakpoint-up(medium) {
-                font-size: 15px;
                 width: 91%;
+                font-size: 0.9375rem;
             }
 
             h1 {
                 width: auto;
-                font-size: 18px;
                 line-height: 1.3;
                 margin-bottom: 0;
                 font-weight: 600;
+                font-size: 1.125rem;
 
                 @include breakpoint-up(medium) {
-                    font-size: 38px;
                     width: 20rem;
                     font-weight: 700;
+                    font-size: 2.375rem;
                 }
             }
 
             p {
-                margin-bottom: 14px;
+                margin-bottom: 0.875rem;
             }
 
             .link {
-                margin-top: 22px;
                 width: 8rem;
                 display: flex;
+                padding-bottom: 4px;
                 align-items: center;
+                margin-top: 1.375rem;
                 justify-content: space-between;
                 border-bottom: 1px solid $cyan;
-                padding-bottom: 4px;
 
                 @include breakpoint-up(medium) {
                     width: 10rem;
@@ -83,7 +83,7 @@
 
                 a {
                     color: $cyan;
-                    font-size: 12px;
+                    font-size: 0.75rem;
 
                     @include breakpoint-up(medium) {
                         font-size: inherit;
